fix page break in print preview

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,6 @@
   }
 }
 
-.print-force-new-page {
+/* .print-force-new-page {
   page-break-before: always;
-}
+} */
